# specpulse

./: .gitignore  .pre-commit-config.yaml  AI_CLI_INTEGRATION_GUIDE.md  ARCHITECTURE.md  BUG_DISCOVERY_SUMMARY.txt  BUG_FIX_REPORT.md  BUG_FIX_SUMMARY.md  BUG_REPORT.md  CHANGELOG.md  CHANGELOG_v2.2.0.md  CLAUDE.md  CLI_REFERENCE.md  CNAME  COMPREHENSIVE_BUG_ANALYSIS_2025-11-18.md  COMPREHENSIVE_BUG_ANALYSIS_REPORT.md  COVERAGE_REPORT.md  DOCUMENTATION_INDEX.md  DOMAIN_SETUP.md  FINAL_BUG_FIX_REPORT_2025-11-18.md  HELP_SYSTEM.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  MIGRATION.md  MIGRATION_v1.8.0.md  MIGRATION_v2.1.3.md  NEW_BUG_DISCOVERY_REPORT.md  PUBLISH_CHECKLIST.md  PYPI_PUBLISH.md  README.md  RELEASE_NOTES_v2.2.0.md  RELEASE_v2.1.0_COMPLETE.md  RELEASE_v2.3.0.md  REPOSITORY_STRUCTURE.md  REVIEW.md  ROADMAP.md  SECURITY.md  SECURITY_STABILITY_ANALYSIS.md  SPECDRIVEN.md  (+15 more)
.claude/: settings.local.json
.claude/commands/: sp-continue.md  sp-decompose.md  sp-execute.md  sp-plan.md  sp-pulse.md  sp-spec.md  sp-task.md  sp-test.md  sp-validate.md
.specpulse/: config.yaml
docs/: AI_INTEGRATION.md  COMMAND_MIGRATION_GUIDE.md  INSTALLATION.md  MIGRATION.md  MIGRATION_v2.2.0.md  README.md  TROUBLESHOOTING.md  llm-safe-operations-guide.md  monitor.md
examples/: README.md  v1.9.0-sp-pulse-example.md  v1.9.0-sp-spec-example.md
fixed-test-project/: PULSE.md
memory/: constitution.md  context.md
scripts/: check_path_validation.py  migrate_feature_counter.py  sp-pulse-decompose.ps1  sp-pulse-decompose.sh  sp-pulse-execute.ps1  sp-pulse-execute.sh  sp-pulse-init.ps1  sp-pulse-init.sh  sp-pulse-plan.sh  sp-pulse-spec.sh  sp-pulse-task.sh
specpulse/: __init__.py  __main__.py  _version.py
templates/: spec-tier1-minimal.md  spec-tier1.md  spec-tier2.md  spec-tier3-complete.md  spec-tier3.md  spec.md  task.md
test-project/: PULSE.md
tests/: __init__.py  conftest.py  test_100_coverage.py  test_100_percent_coverage.py  test_ai_commands.py  test_all.py  test_bug_fixes_2025_11_18.py  test_bug_fixes_2025_11_18_simple.py  test_bug_fixes_repo_analysis.py  test_checkpoints.py  test_cli.py  test_cli_advanced.py  test_cli_comprehensive.py  test_cli_fixed.py  test_command_integration.py  test_complete_100.py  test_complete_coverage.py  test_console_advanced.py  test_console_comprehensive.py  test_core.py  test_core_comprehensive.py  test_coverage_100.py  test_feature_id_generator.py  test_final_100.py  test_full_coverage.py  test_gemini_commands.py  test_git_utils.py  test_git_utils_complete.py  test_git_utils_comprehensive.py  test_integration_workflow.py  test_main_complete.py  test_memory_manager.py  test_path_validator.py  test_performance.py  test_progress_calculator.py  test_service_container.py  test_specpulse.py  test_template_cache.py  test_template_fallback_warnings.py  test_template_manager.py  (+7 more)
website/: README.md  _config.yml  index.html  script.js  style.css
(+417 files in other folders)
